WRP-3268 - fixing spacing, buttons, and hard to read text in all three themes. Also re worked header bar to use more consistent highlighting and buttons for dark theme.

--- a/app/styles/classification.scss
+++ b/app/styles/classification.scss
@@ -29,11 +29,12 @@
 .classification-report .nav-tabs li a {
 	padding: 10px 15px;
 }
-.classification-header {
-    padding-bottom: 8px;
+.reports-header{ padding-bottom: 8px;
     padding-top: 8px;
     max-height: 48px;
-    line-height: 1;
+    line-height: 1;}
+.classification-header {
+   
 }
 .classification-header p {
 	margin: 0px;
