--- a/app/styles/dark.scss
+++ b/app/styles/dark.scss
@@ -824,3 +824,5 @@ sca-dark .pull-left.follow-up {
 .sca-dark  .green-text {
     color: #8bc34a;
 }
+
+.sca-dark .validation-header{background-color:#4527a0}
